--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
@@ -18,7 +19,24 @@
                 <h1>Login</h1>
                 <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post">
+                    <form action="login.php" method="post">
+                        <div class="campo">
+                            <i class="material-icons">mail</i>
 
+                            <input type="email" name="login" id="ilogin" placeholder="Seu e-mail">
+
+                            <label for="ilogin">Login</label>
+                        </div>
+
+                        <div class="campo">
+                            <i class="material-icons">password</i>
+
+                            <input type="password" name="senha" id="isenha" placeholder="digite sua senha" autocomplete="current-password">
+
+                            <label for="isenha">Senha</label>
+                        </div>
+                        <input type="submit" value="">
+                    </form>
                 </form>
             </div>
         </section>
