--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <div class="campo">
                             <i class="material-icons">mail</i>
 
-                            <input type="email" name="login" id="ilogin" placeholder="Seu e-mail">
+                            <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
 
                             <label for="ilogin">Login</label>
                         </div>
@@ -31,11 +31,14 @@
                         <div class="campo">
                             <i class="material-icons">password</i>
 
-                            <input type="password" name="senha" id="isenha" placeholder="digite sua senha" autocomplete="current-password">
+                            <input type="password" name="senha" id="isenha" placeholder="digite sua senha" autocomplete="current-password" required minlength="8" maxlength="15">
 
                             <label for="isenha">Senha</label>
                         </div>
-                        <input type="submit" value="">
+                        <input type="submit" value="Entrar">
+                        <a href="esqueci.html" class="botao">
+                            Esqueci minha senha <i class="material-icons">mail</i>
+                        </a>
                     </form>
                 </form>
             </div>
